ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Storage Execution 2026-01-19
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When primary steps down in PDIB, it fails to write to the oplog which fails the index build. The node then tries to clean up the index build and hits the fatal assertion here. We should instead check the error code in the abort status, and skip the cleanup upon InterruptedDueToReplStateChange.

      With SERVER-111661, the new primary will abort the index on stepup.

            Assignee:
            Wei Hu
            Reporter:
            Wei Hu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: