SERVER-117170 Primary driven index build should not be aborted by the stepped down primary (#46387)

GitOrigin-RevId: 07d7dc216f3e6af445e8ff771af4806bac69a1cd